chore: add custom Dockerfiles
update miner & bootnodes

--- a/env/miner3.env
+++ b/env/miner3.env
@@ -1,4 +1,4 @@
 # Specific configurations for Miner 3
-ADDRESS="0xYourMiner1Address"
+ADDRESS="1c33983e5f23468c8f4f815e4a27045dbcf1bf01"
 ETH_STAT_MACHINE_ID="miner1-machine-id"
 ETH_STAT_MACHINE_IP="miner1-machine-ip"
