--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,51 +3,53 @@ version: '3.8'
 services:
   # 🧩 Private Bootnode
   private-bootnode:
-    image: ethereum/client-go:v1.10.26
-    command: bootnode --datadir /bootnode --port 30301 --verbosity 3
+    build:
+      context: .
+      dockerfile: docker/bootnode/Dockerfile
+    command: /abc/bootnode --nodekey bootnode.key --verbosity 3
     networks:
       - node-private
-    volumes:
-      - ./shared/bootnode:/bootnode
-      - ./volumes/private-bootnode:/bootnode
 
   # 🛠️ Miners (Private Network)
   miner1:
-    image: ethereum/client-go:v1.10.26
-    entrypoint: /data/start.sh
+    build:
+      context: .
+      dockerfile: docker/miner-geth/Dockerfile
+    command: /abc/start.sh
     env_file:
       - ./env/miner.env
       - ./env/miner1.env
     volumes:
-      - ./volumes/miner1:/data
-      - ./shared/genesis.json:/data/genesis.json
-      - ./shared/start-miner.sh:/data/start.sh
+      - ./volumes/miner1:/abc/data
+      - ./shared/genesis.json:/abc/genesis.json
     networks:
       - node-private
 
   miner2:
-    image: ethereum/client-go:v1.10.26
-    entrypoint: /data/start.sh
+    build:
+      context: .
+      dockerfile: docker/miner-geth/Dockerfile
+    command: /abc/start.sh
     env_file:
       - ./env/miner.env
       - ./env/miner2.env
     volumes:
-      - ./volumes/miner2:/data
-      - ./shared/genesis.json:/data/genesis.json
-      - ./shared/start-miner.sh:/data/start.sh
+      - ./volumes/miner2:/abc/data
+      - ./shared/genesis.json:/abc/genesis.json
     networks:
       - node-private
 
   miner3:
-    image: ethereum/client-go:v1.10.26
-    entrypoint: /data/start.sh
+    build:
+      context: .
+      dockerfile: docker/miner-geth/Dockerfile
+    command: /abc/start.sh
     env_file:
       - ./env/miner.env
       - ./env/miner3.env
     volumes:
-      - ./volumes/miner3:/data
-      - ./shared/genesis.json:/data/genesis.json
-      - ./shared/start-miner.sh:/data/start.sh
+      - ./volumes/miner3:/abc/data
+      - ./shared/genesis.json:/abc/genesis.json
     networks:
       - node-private
 
@@ -69,15 +71,14 @@ services:
 
   # 🌍 Public Bootnode
   public-bootnode:
-    image: ethereum/client-go:v1.10.26
-    command: bootnode --datadir /bootnode --port 30301 --verbosity 3
+    build:
+      context: .
+      dockerfile: docker/bootnode/Dockerfile
+    command: /abc/bootnode --nodekey bootnode.key --verbosity 3
     networks:
       - node-public
     ports:
       - "30301:30301"
-    volumes:
-      - ./shared/bootnode:/bootnode
-      - ./volumes/public-bootnode:/bootnode
 
   # 🌐 Public Fullnodes
   public-node1:
