--- a/env/miner1.env
+++ b/env/miner1.env
@@ -1,4 +1,4 @@
 # Specific configurations for Miner 1
-ADDRESS="0xYourMiner1Address"
+ADDRESS="369bebccaad6569fe9bebccd5c8458d2fcad1cc3"
 ETH_STAT_MACHINE_ID="miner1-machine-id"
 ETH_STAT_MACHINE_IP="miner1-machine-ip"
