--- a/env/bridge-node.env
+++ b/env/bridge-node.env
@@ -1,2 +1,4 @@
 # Specific configurations for Bridge Node (Fullnode)
 ENODE="enode://your_bridge_enode_here"
+ETH_STAT_MACHINE_ID="bridge-machine-id"
+ETH_STAT_MACHINE_IP="bridge-machine-ip"
