chore: update example genesis

--- a/env/node.env
+++ b/env/node.env
@@ -7,4 +7,5 @@ AUTH_PORT=8551
 NETWORK_ID=99
 PEER_PORT=30303
 ENODE="enode://your_enode_here"ETH_STAT_MACHINE_ID="node-machine-id"
+ETH_STAT_MACHINE_ID="node-machine-id"
 ETH_STAT_MACHINE_IP="node-machine-ip"
