--- a/env/bridge-node.env
+++ b/env/bridge-node.env
@@ -1,4 +1,4 @@
 # Specific configurations for Bridge Node (Fullnode)
-ENODE="enode://your_private_bootnode_enode_here"
+ENODE="enode://your_private_bootnode_enode_here@private-bootnode:30301"
 ETH_STAT_MACHINE_ID="bridge-machine-id"
 ETH_STAT_MACHINE_IP="bridge-machine-ip"
