--- a/env/miner.env
+++ b/env/miner.env
@@ -6,4 +6,4 @@ MINER_GASLIMIT=8000000
 NETWORK_ID=99
 PEER_PORT=30303
 AUTH_PORT=8553
-ENODE="enode://your_private_bootnode_enode_here"
+ENODE="enode://your_private_bootnode_enode_here@private-bootnode:30301"
