--- a/env/node.env
+++ b/env/node.env
@@ -6,6 +6,6 @@ HTTP_API=eth,net,web3
 AUTH_PORT=8551
 NETWORK_ID=99
 PEER_PORT=30303
-ENODE="enode://your_bridge_enode_here"
+ENODE="enode://your_bridge_enode_here@bridge-node:30301"
 ETH_STAT_MACHINE_ID="node-machine-id"
 ETH_STAT_MACHINE_IP="node-machine-ip"
